* prelude.rb: Moved Mutex#synchronize to * thread.c (rb_mutex_synchronize_m): here. [Bug #4266]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37724 b2dd03c8-39d4-4d8f-98ff-823fe69b080e